--- a/views/index.html
+++ b/views/index.html
@@ -30,8 +30,7 @@
             <div class="col s12">
               <a href="#!" class="brand-logo">Spartan</a>
               <ul id="navigation" class="right side-nav">
-              <li><i class="mdi-action-account-search left"></i>
-                     <input id="icon_prefix" type="search" class="validate">
+              <li><input id="searchInput" type="search" class="validate" placeholder="Buscar...">
               </li>
              <!-- Dropdown Trigger -->
               <li><a class="dropdown-button" href="#" data-activates="cat-dropdown">Categorias<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
