--- a/public/sass/_styles.sass
+++ b/public/sass/_styles.sass
@@ -6,11 +6,8 @@
 .btn i, .btn-large i, .btn-floating i, .btn-large i, .btn-flat i
   vertical-align: middle!important
 
-.card-reveal>.section>p
-  font-size: 1.1 em
-  &>i
-    font-size: 1.5 em
-    vertical-align: middle
+.card-reveal>.section>p>i
+  vertical-align: middle
 
 .card-content>span.activator
   vertical-align: middle
