--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="SpartanD">
+<html>
   <head>
     <title>Spartan Downloader</title>
-    <!-- bower:css -->
     <base href="/">
+    <!-- bower:css -->
     <link rel="stylesheet" href="./vendor/materialize/bin/materialize.css" />
     <link rel="stylesheet" href="./vendor/wowjs/css/libs/animate.css" />
     <!-- endbower -->
@@ -13,7 +13,7 @@
     <!-- endinject -->
 
   </head>
-  <body ng-controller="mainController">
+  <body ng-app="SpartanD">
     <div class="navbar-fixed">
       <ul id="cat-dropdown" class="dropdown-content">
         <li><a href="#">OS</a></li>
@@ -46,40 +46,14 @@
         </nav>
   </div>
     <div class="container">
-      <div class="row">
-          <div ng-repeat="programa in programas | orderBy: fecha | filter: search " class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                       <img class="activator" src="img/{{ programa.tipo }}.jpg">
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">{{ programa.nombre }}<i class="mdi-hardware-keyboard-arrow-up right"></i>
-                      </span>
-                      <p>
-                        <a href=".{{ programa.url }}"  class="red-text btn-flat waves-effect waves-ligt"><i class="mdi-file-cloud-download"></i> Descargar</a>
-                      </p>
-                    </div>
-                    <div class="card-reveal grey-text text-darken-3">
-                        <span class="card-title grey-text text-darken-4">{{ programa.nombre }} <i class="mdi-navigation-close right"></i></span>
-                        <p>{{ programa.resumen}}</p>
-                        <div class="section">
-                          <p><i class="mdi-action-label"></i> {{ programa.tipo }}</p>
-                          <div class="divider"></div>
-                          <p><i class="mdi-device-access-time"></i> Subido:{{ programa.fecha | date }}</p>
-                          <div class="divider"></div>
-                          <p><i class="mdi-action-star-rate"></i> {{ programa.rating }} Descargas</p>
-                      </div >
-                    </div>
-              </div>
-          </div>
-
-      </div>
+      <div class="row" ui-view></div>
     </div>
     <!-- bower:js -->
     <script src="./vendor/jquery/dist/jquery.js"></script>
     <script src="./vendor/angular/angular.js"></script>
     <script src="./vendor/materialize/bin/materialize.js"></script>
     <script src="./vendor/wowjs/dist/wow.js"></script>
+    <script src="./vendor/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- inject:js -->
     <script src="js/appControllers.js"></script>
