--- a/public/sass/_styles.sass
+++ b/public/sass/_styles.sass
@@ -3,6 +3,14 @@
   padding: 0 1rem
   height: 150%
 
+@media only screen and (min-width: 601px)
+  div.row.wow>.col.wow.m6
+    margin-bottom: 2.2rem
+  .card-reveal
+    font-size: 1.3rem
+    & p>a.btn-large
+      font-size: rem(16)
+
 .btn i, .btn-large i, .btn-floating i, .btn-large i, .btn-flat i
   vertical-align: middle!important
 
