--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
         </nav>
   </div>
     <div class="container">
-      <div class="row" ui-view></div>
+      <div class="row wow" ui-view></div>
     </div>
     <!-- bower:js -->
     <script src="./vendor/jquery/dist/jquery.js"></script>
