El mas grande de Todos :3 :dart:
Hemos agregado un Footer, con la descripción, hemos hecho que los
programas se Descargue :smiley: y se incremente el Campo de "Rating" de
cada programa, emerge una "TOAST" diciendo que el programa se ha
descargado.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,17 @@
 /* INDIGO*RED */
+.card::-moz-selection {
+  background-color: #e57373;
+  color: #212121;
+}
+.card::selection {
+  background-color: #e57373;
+  color: #212121;
+}
+.card::-moz-selection {
+  background-color: #e57373;
+  color: #212121;
+}
+
 .nav-wrapper {
   overflow: hidden;
   padding: 0 1rem;
@@ -13,7 +26,7 @@
   .card-reveal {
     font-size: 1.3rem;
   }
-  .card-reveal > a.btn-large {
+  .card-reveal p > a.btn-large {
     font-size: 1rem;
   }
 }
