--- a/public/sass/_styles.sass
+++ b/public/sass/_styles.sass
@@ -1,3 +1,8 @@
+.card
+  @include selection
+    background-color: #e57373
+    color: #212121
+
 .nav-wrapper
   overflow: hidden
   padding: 0 1rem
