--- a/views/index.html
+++ b/views/index.html
@@ -7,52 +7,79 @@
     <link rel="stylesheet" href="./vendor/materialize/bin/materialize.css" />
     <link rel="stylesheet" href="./vendor/wowjs/css/libs/animate.css" />
     <!-- endbower -->
-
+    <script src="./vendor/wowjs/dist/wow.js"></script>
     <!-- inject:css -->
     <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
 
   </head>
   <body ng-app="SpartanD">
-    <div class="navbar-fixed">
-      <ul id="cat-dropdown" class="dropdown-content">
-        <li><a href="#">OS</a></li>
-        <li><a href="#">Crack</a></li>
-        <li class="divider"></li>
-        <li><a href="#">IDE</a></li>
-        <li><a href="#">Seguridad</a></li>
-        <li><a href="#">Diseño</a></li>
-        <li class="divider"></li>
-        <li><a href="#">Documentos</a></li>
-        <li><a href="#">Utilidades</a></li>
-        <li><a href="#">Otros</a></li>
-      </ul>
-       <nav>
-          <div class="nav-wrapper indigo darken-1">
-            <div class="col s12">
-              <a href="#!" class="brand-logo">Spartan</a>
-              <ul id="navigation" class="right side-nav">
-              <li><input id="searchInput" type="search" ng-model="search.nombre" class="validate" placeholder="Buscar...">
-              </li>
-             <!-- Dropdown Trigger -->
-              <li><a class="dropdown-button" href="#" data-activates="cat-dropdown">Categorias<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-             <li><a href="#">
-                <i class="mdi-action-account-circle left"></i>Login
-            </a></li>
-              </ul>
+    <header>
+      <div class="navbar-fixed">
+        <ul id="cat-dropdown" class="dropdown-content">
+          <li><a href="#">OS</a></li>
+          <li><a href="#">Crack</a></li>
+          <li class="divider"></li>
+          <li><a href="#">IDE</a></li>
+          <li><a href="#">Seguridad</a></li>
+          <li><a href="#">Diseño</a></li>
+          <li class="divider"></li>
+          <li><a href="#">Documentos</a></li>
+          <li><a href="#">Utilidades</a></li>
+          <li><a href="#">Otros</a></li>
+        </ul>
+         <nav>
+            <div class="nav-wrapper indigo darken-1">
+              <div class="col s12">
+                <a href="#!" class="brand-logo">Spartan</a>
+                <ul id="navigation" class="right side-nav">
+                <li><input id="searchInput" type="search" ng-model="search.nombre" class="validate" placeholder="Buscar...">
+                </li>
+               <!-- Dropdown Trigger -->
+                <li><a class="dropdown-button" href="#" data-activates="cat-dropdown">Categorias<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+               <li><a href="#">
+                  <i class="mdi-action-account-circle left"></i>Login
+              </a></li>
+                </ul>
+              </div>
+               <a class="button-collapse" href="#" data-activates="navigation"><i class="mdi-navigation-menu"></i></a>
             </div>
-             <a class="button-collapse" href="#" data-activates="navigation"><i class="mdi-navigation-menu"></i></a>
-          </div>
-        </nav>
-  </div>
+          </nav>
+    </div>
+  </header>
+  <main>
     <div class="container">
       <div class="row wow" ui-view></div>
     </div>
+  </main>
+    <footer class="page-footer indigo white-text text-darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5>Spartan</h5>
+            <p class="grey-text text-lighten-2">Un sistema de gestión de Descargas Creado por Estudiantes Entusiastas</p>
+            <div class="divider"></div>
+            <h5>Encuentralo en <a href="http://github.com/Macro-T/Spartan" class="red-text text-lighten-3">Giithub</a></h5>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5>Desarrolado Por</h5>
+            <p><a class="grey-text text-lighten-2" href="http://twitter.com/MacroT">Misael Taveras</a></p>
+            <div class="divider"></div>
+            <p><a class="grey-text text-lighten-2" href="http://twitter.com/ElvisVanderpool">Elvis Vanderpool</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright red-text text-lighten-2">
+        <div class="container">
+        <p class="right">© 2015 Hecho con ♥</p>
+        </div>
+      </div>
+      </div>
+    </footer>
     <!-- bower:js -->
     <script src="./vendor/jquery/dist/jquery.js"></script>
     <script src="./vendor/angular/angular.js"></script>
     <script src="./vendor/materialize/bin/materialize.js"></script>
-    <script src="./vendor/wowjs/dist/wow.js"></script>
     <script src="./vendor/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- inject:js -->
