Un Buen numero de cambios
PAra empezar, se ha agregado el Login con passport (Aun en proceso) Un
hermoso footer, un mejor control de "VACIO", se ha cambiado el modelo de
los Programas (anteriormente capitalizado, ahora está en minusculas para
evitar mayores inconvenietes, se añadio un monton de codigo, y otro
controlador para la main view. Estamos trabajando aun en la
optimizacion.

--- a/public/sass/_styles.sass
+++ b/public/sass/_styles.sass
@@ -24,3 +24,13 @@
 
 .card-content>span.activator
   vertical-align: middle
+
+.modal-content>.container> h1
+  vertical-align: middle
+  &> i
+    vertical-align: middle
+#searchInput
+  color: darken(#7986cb, 5)
+  @media only screen and (min-width: 601px)
+    color:white
+
