--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Spartan Downloader</title>
     <base href="/">
+    <title>Spartan Downloader</title>
     <!-- bower:css -->
     <link rel="stylesheet" href="./vendor/materialize/bin/materialize.css" />
     <link rel="stylesheet" href="./vendor/wowjs/css/libs/animate.css" />
@@ -14,31 +14,38 @@
 
   </head>
   <body ng-app="SpartanD">
-    <header>
+    <header ng-controller="navbarCtrl">
       <div class="navbar-fixed">
         <ul id="cat-dropdown" class="dropdown-content">
-          <li><a href="#">OS</a></li>
-          <li><a href="#">Crack</a></li>
+          <li><a ui-sref="category({cat: 'Os'})">OS</a></li>
+          <li><a ui-sref="category({cat: 'Crack'})">Crack</a></li>
           <li class="divider"></li>
-          <li><a href="#">IDE</a></li>
-          <li><a href="#">Seguridad</a></li>
-          <li><a href="#">Diseño</a></li>
+          <li><a ui-sref="category({cat: 'Ide'})">IDE</a></li>
+          <li><a ui-sref="category({cat: 'Seguridad'})">Seguridad</a></li>
+          <li><a ui-sref="category({cat: 'Diseno'})">Diseño</a></li>
           <li class="divider"></li>
-          <li><a href="#">Documentos</a></li>
-          <li><a href="#">Utilidades</a></li>
-          <li><a href="#">Otros</a></li>
+          <li><a ui-sref="category({cat: 'Documento'})">Documentos</a></li>
+          <li><a ui-sref="category({cat: 'Utilidades'})">Utilidades</a></li>
+          <li><a ui-sref="category({cat: 'Otros'})">Otros</a></li>
+        </ul>
+        <ul id="action-dropdown" class="dropdown-content">
+            <li><a ui-serf="user({profile: userData.local.username})">Mi Perfil</a></li>
+            <li><a href="#" ng-click="logOut">Salir</a></li>
         </ul>
          <nav>
             <div class="nav-wrapper indigo darken-1">
               <div class="col s12">
-                <a href="#!" class="brand-logo">Spartan</a>
+                <a ui-sref="/" class="brand-logo">Spartan</a>
                 <ul id="navigation" class="right side-nav">
                 <li><input id="searchInput" type="search" ng-model="search.nombre" class="validate" placeholder="Buscar...">
                 </li>
                <!-- Dropdown Trigger -->
                 <li><a class="dropdown-button" href="#" data-activates="cat-dropdown">Categorias<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-               <li><a href="#">
-                  <i class="mdi-action-account-circle left"></i>Login
+               <li ng-hide="isLogedIn"><a href="#loginModal" class="modal-trigger">
+                  <i class="mdi-action-account-circle right"></i>{{ userData.local.username }}
+              </a></li>
+              <li ng-show="isLogedIn"><a class="dropdown-trigger" href="#" data-activates="action-dropdown">
+                  <i class="mdi-navigation-arrow-drop-down right"></i>Hola, {{ userData.local.username }}
               </a></li>
                 </ul>
               </div>
@@ -49,7 +56,7 @@
   </header>
   <main>
     <div class="container">
-      <div class="row wow" ui-view></div>
+      <div class="row wow" ui-view="main"></div>
     </div>
   </main>
     <footer class="page-footer indigo white-text text-darken-3">
@@ -74,8 +81,8 @@
         <p class="right">© 2015 Hecho con ♥</p>
         </div>
       </div>
-      </div>
     </footer>
+   <div ui-view="modals"></div>
     <!-- bower:js -->
     <script src="./vendor/jquery/dist/jquery.js"></script>
     <script src="./vendor/angular/angular.js"></script>
