El grande :smiley:
En este Commit se  ha hecho de todo. Se ha añadido un "SERVICIO" o
"FACTORIA" de AngularJS para manejar mejor la API. Se han añadido nuevas
dependencias y se ha añadido una nueva ruta que recorre el directorio
"./public/programs" para añadirlos automaticamente a la DB (En el
proximo Commit :dancer: ).

--- a/public/templates/modals.tpl.html
+++ b/public/templates/modals.tpl.html
@@ -12,38 +12,20 @@
             <label for="userName">Nombre de Usuario</label>
           </div>
 
-          <div class="input-field col s12" ng-show="registrer">
-            <i class="mdi-communication-email prefix"></i>
-            <input id="email" type="email" class="validate" required="{{ registrer }}" name="email" ng-model="email" ng-disabled="!registrer">
-            <label for="email">Correo Electronico</label>
-          </div>
-
           <div class="input-field col s12">
             <i class="mdi-action-lock-outline prefix"></i>
             <input id="userPassword" type="password" class="validate" required ng-model="password" name="password">
             <label for="userPassword">Contraseña</label>
           </div>
-
-          <div class="input-field col s12" ng-show="registrer">
-            <i class="mdi-action-lock-outline prefix"></i>
-            <input id="repeatPassword" type="password" class="validate" required="{{ registrer }}" name="repeatPassword" ng-model="repeatPassword" ng-disabled="!registrer">
-            <label for="repeatPassword">Repite la Contraseña</label>
-          </div>
+        </div>
         </div>
         </div>
 
         <div class="modal-footer">
           <div class="row">
-            <div class="col m12 l6">
-              <a href="#" class="btn waves-effect waves-red red btn-large btn-block" ng-hide="registrer" ng-click="registrer=!registrer"><i class="mdi-action-account-child left"></i> Registrate</a>
-              <a href="#" class="btn waves-effect waves-red red btn-large btn-block" ng-show="registrer" ng-click="registrer=!registrer"><i class="mdi-action-account-child left"></i> Acceder</a>
-            </div>
-            <div class="col m12 l6">
-              <button class="btn waves-effect waves-blue indigo btn-large btn-block" type="submit" ng-hide="registrer">Acceder<i class="mdi-content-send right"></i>
-              </button>
-              <button class="btn waves-effect waves-blue indigo btn-large btn-block" type="submit" ng-show="registrer">Registrame<i class="mdi-content-send right"></i>
-              </button>
-            </div>
+            <div class="col s12">
+              <a href="#" class="btn waves-effect waves-red red btn-large btn-block"><i class="mdi-action-account-child left"></i> Acceder</a>
+         </div>
         </div>
     </div>
   </form>
