--- a/public/templates/main.tpl.html
+++ b/public/templates/main.tpl.html
@@ -1,5 +1,5 @@
-<div class="valign-wrapper color red col s12 white-text" ng-show="message">
-    <h1 class="valign center-align">{{ message.error }} {{ category }}</h1>
+<div class="valign-wrapper color red col s12 white-text" ng-show="message.error || !programas">
+    <h1 class="valign center-align">{{ message.error }} <strong>"{{ selectedCategory }}"</strong></h1>
 </div>
 <div ng-repeat="programa in programas | orderBy: programa.rating | filter: search " class="col m12 l6 wow fadeInUpBig">
       <div class="card">
@@ -17,9 +17,9 @@
               <span class="card-title grey-text text-darken-4">{{ programa.nombre }} <i class="mdi-navigation-close right"></i></span>
               <p>{{ programa.resumen | limitTo: 80}} ...</p>
               <div class="section">
-                <p><i class="mdi-action-label"></i> {{ programa.tipo }}</p>
+                <p><i class="mdi-action-label"></i> {{ programa.tipo | capitalize }}</p>
                 <div class="divider"></div>
-                <p><i class="mdi-device-access-time"></i> Subido:{{ programa.fecha | date }}</p>
+                <p><i class="mdi-device-access-time"></i> Subido: {{ programa.fecha | date }}</p>
                 <div class="divider"></div>
                 <p><strong><i class="mdi-action-star-rate"></i> {{ programa.rating }} Descargas</strong></p>
                 <div class="divider"></div>
