--- a/public/sass/_inputFields.scss
+++ b/public/sass/_inputFields.scss
@@ -25,11 +25,18 @@
 .input-field .prefix.active {
  color: #3f51b5 ;
 }
-
-@media only screen and (min-width: 601px){
-  .btn.waves-effect.btn-large.btn-block{
-    display: block;
-    width: 100%;
+.btn.green-text:hover, .btn-large.green-text:hover{
+  color:white!important;
+}
+.btn.waves-effect.btn-large.btn-block{
+  display: block;
+  font-size: 2em;
+  padding: 1.5rem 3rem;
+  height: auto;
+  line-height: 250%;
+  width: 100%;
+  &>i{
+    font-size: 2.2em
   }
 }
 .waves-effect.waves-blue{
